2000-11-24  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/tcltest/tcltest.tcl (getMatchingFiles,
	  getMatchingDirectories):
	* tools/man2html.tcl (doDir): 
	* tools/man2help.tcl (doDir): 
	* library/package.tcl (tclPkgUnknown,tclMacPkgSearch): 
	* library/safe.tcl (AddSubDirs): [glob] uses -directory instead of
	  unsafe [file join] to fix Bug #123313

	* generic/tclIndexObj.c:
	* generic/tclTestObj.c (TestindexobjCmd): Changed internal
	  representation of index objects to fix Bug #119082; fix
	  shouldn't be visible to outside world...

	* generic/tclTest.c (TestGetIndexFromObjStructObjCmd): 
	* tests/indexObj.test: (indexObj-6.*) Added to test for presence
	  of Bug #119082.

2000-11-23  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdIL.c (Tcl_LsortObjCmd): Fixed memory leak from Bug
	  #119398

	* library/init.tcl (unknown): Added specific level parameters to
	  all uplevel invokations to boost performance; didn't dare touch
	  the "namespace inscope" stuff though, since it looks sensitive
	  to me!  Should fix Bug #123217, though testing is tricky...

2000-11-21  Andreas Kupries  <a.kupries@westend.com>

	* All of the changes below are described in TIP #7 ~ Specification
 	  and result from the application of the patch contained
 	  therein. Creator of the patch is Kevin Kenny
 	  <kennykb@crd.ge.com>. The patch used here is actually a bit
 	  different. Two MS specific constant values (format FOOui64) were
 	  replaced with a more portable formatting of the values and an
 	  additional cast to LONGLONG. My cross-compiling gcc was unable to
	  process the original form. The SF Id of the patch is 102459.

       	* tclWinTime.c: Add to the static data a set of variables that
 	  manage the phase-locked techniques, including a
 	  ''CRITICAL_SECTION'' to guard them so that multi-threaded code
 	  is stable.

	* tclWinTime.c: Modify ''TclpGetSeconds'' to call ''TclpGetTime''
 	  and return the 'seconds' portion of the result.  This change is