@@ -1,5 +1,8 @@
 2000-11-24  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
+	* tests/expr.test (expr-13.17): Check that [expr {!$var}] can
+	negate the string-versions of booleans "yes", "false", etc.
+
 	* library/tcltest/tcltest.tcl (getMatchingFiles,
 	  getMatchingDirectories):
 	* tools/man2html.tcl (doDir): 
